# to-do

./: .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  conftest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: response.py
src/application/: server.py  status.py
src/application/controllers/: create_todo_controller.py  delete_todo_controller.py  detail_todo_controller.py  list_todo_controller.py  partial_update_todo_controller.py  update_todo_controller.py
src/application/rest/: health_check.py  todo.py
src/commons/config/: settings.py
src/dto/: todo_create_dto.py  todo_update_dto.py
src/exception/: custom_errors.py
src/infra/database/config/: db_config.py
src/infra/database/entities/: __init__.py  todo.py
src/infra/database/migrations/: env.py
src/infra/database/migrations/versions/: 7bb95d8ba645_added_table.py
src/infra/database/repository/: todo_repository.py
src/interfaces/: todo_repository.py
src/serializers/: todo.py
src/use_case/: create_todo.py  delete_todo.py  detail_todo.py  list_todo.py  partial_update_todo.py  update_todo.py
tests/: conftest.py
tests/test_application/: test_create_todo.py  test_delete_todo.py  test_detail_todo.py  test_health_check_todo.py  test_list_todo.py  test_partial_update_todo.py  test_update_todo.py
