[tool.poetry]
name = "parc-tarefas"
version = "0.1.0"
description = ""
authors = ["Jackson <jack.teruya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restx = "^1.3.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
gunicorn = "^23.0.0"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
pytest = "^8.3.3"
coverage = "^7.6.1"
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
